2018-10-13  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/tests/formatting/list-of-tests (direntry_dircategory_info_split):
	Remove.
	* tp/t/92formatting.t (direntry_dircategory_info_split): Add.

2018-10-13  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/tests/Makefile.am (Makefile.onetst): Fix rule to work
	in out-of-source builds.

2018-10-13  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/tests/formatting/list-of-tests (defcondx_Dbar, defcondx_Ubar):
	Remove.
	* tp/t/92formatting.t (defcondx_Dbar, defcondx_Ubar): Add.

2018-10-13  Gavin Smith  <gavinsmith0123@gmail.com>
	
	* tp/Texinfo/Parser.pm (%default_customization_values): Remove
	'GLOBAL_COMMANDS' array as it is not used anywhere.
	(_setup_parser): Do not access 'GLOBAL_COMMANDS' conf value.

2018-10-13  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Makefile.am: List files under tp/t/include_reference.
	* tp/maintain/regenerate_file_lists.pl: Do not automatically 
	generate a list of these files.

2018-10-13  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/maintain/regenerate_file_lists.pl:
	Do not generate the variable 'test_copied_include_files'.  
	Remove copyright notice from generated file as the year is 
	out-of-date.

2018-10-13  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/t/test_utils.pl: Remove code copying 't/include_reference'
	to build directory.  Do not include any directories in the 
	current directory in the include path.
	* tp/Makefile.am (all-local): Do not depend upon these copied files.

2018-10-13  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/t/test_utils.pl, tp/t/nodenormalisation.t:
	Put tp/t/include_reference in srcdir in include path.

	* tp/t/80include.t (test_paths, test_include_directories): 
	Remove tests.
	* tp/t/converters_tests.t (verbatiminclude_paths):
	test_include_directories): Remove tests.
	* tp/t/info_tests.t (image_file_search): Remove test.
	test_include_directories): Remove tests.

	* tp/maintain/regenerate_file_lists.pl: Do not generate rules to 